tests/NormalTests/paczka1/fuzzy1/54552406.err
Error in line 1: IxnkS S797 58,0
Error in line 11: IxnkS A510 14,4
Error in line 26: IxnkS S703 79,5
Error in line 7: Olv9 S597 81,2
Error in line 32: IxnkS S703 14,84
Error in line 30: IxnkS A510 52,2
